--- a/careerportfolio.css
+++ b/careerportfolio.css
@@ -368,17 +368,17 @@ img:not(.decor-icon):not(.icon-header img) {
 }
 
 .screenshot-view {
-    /* Large size for the landscape screenshot */
+    /* Set the width as a percentage of the parent container */
     width: 70%;
-    max-width: 480px; /* Increased size significantly */
     height: auto;
+    max-height: 180px; /* Cap height to prevent disproportionate scaling, letting width dictate size */
 }
 
 .book-cover-view {
-    /* Fixed size for the tall book cover */
+    /* Set the width/height for the book */
     width: 30%;
-    max-width: 140px; /* Increased size */
-    height: 180px; /* Increased size */
+    max-width: 140px; 
+    height: 180px; 
     object-fit: contain;
 }
 /* --- End Resume Section --- */
